2009.12.02: David Nichols
	* implemented member checking for object slices
	* moved all private methods of QoreObject into the private class
	  implementation
	* moved all private methods of QoreProgram into the private class
	  implementation

2009.12.01: David Nichols
	* implemented instantiating variables with default values when defined
	  with hard types of simple types; enforced requiring assignments for
	  variables defined as complex types
	* return nothingTypeInfo as the output type for local variable
	  declarations without any type information if not assigning to allow
	  more programming errors to be caught at parse time
	* initial support for the 'public' keyword and storing type
	  declarations for private class members
	* implemented public class members and parse-time and run-time
	  checking and enforcement
	* fixed a bug where if a program was running in one thread, other
	  threads were allowed to execute parse actions in the running program
	  that could change data structures in use by the running program,
	  which could cause a crash
	* fixed checking key encoding when making hash and object slices

2009.11.30: David Nichols
	* implemented 'invalid-operation' warning to warn when an expression
	  always returns NOTHING, for example
	* added parse-time type checking to the '.', '[]', and 'keys'
	  operators to raise the INVALID-OPERATION warning whenever it's clear
	  at parse time that the given expressions will always return NOTHING
	* added parse-time type checking to the '?:', shift, pop, and push
	  operators
        * fixed a bug returning the last builtin data type ID
	* added callreference/closure call parse-time type checking
	* implemented UserFuntion::setupCall() so code to set up arguments and
	  the argv variable can be shared between UserFunction::call() and
	  UserFunction::callConstructor()
	* implemented return value type checking at parse time
	* implemented parse-time type checking for the splice and unshift
	  operators