@@ -4,6 +4,8 @@
 	  implementation
 	* moved all private methods of QoreProgram into the private class
 	  implementation
+	* fixed public/private member verification during 2nd stage parsing in
+	  class hierarchies
 
 2009.12.01: David Nichols
 	* implemented instantiating variables with default values when defined
